# hans

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  NOTES  README.md  TODO  Vagrantfile  example.toml
apps/hans-engine/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/audio/: AudioBufferManager.cpp  AudioBusManager.cpp  AudioDevices.cpp  AudioStream.cpp  RingBufferManager.cpp
lib/common/: DataLoader.cpp  LinearAllocator.cpp  Logging.cpp  ObjectGraph.cpp  StringManager.cpp
lib/compiler/: CMakeLists.txt  Compiler.cpp
lib/engine/: DataLoader.cpp  LibraryManager.cpp  ParameterManager.cpp  Program.cpp  ProgramManager.cpp  RegisterManager.cpp
lib/gfx-attractors/: CMakeLists.txt  main.cpp  objects.scm
lib/gfx-filter/: CMakeLists.txt  gfx.filter_generated.h  main.cpp  objects.scm
lib/gfx-quad/: CMakeLists.txt  gfx.quad_generated.h  main.cpp  objects.scm
lib/gfx-scopes/: main.cpp  objects.scm  oscilloscope.vert
lib/gfx-script/: IMRenderer.cpp  IMRenderer.hpp  main.cpp  objects.scm  types.hpp
lib/gfx-sndtex/: CMakeLists.txt  main.cpp  objects.scm
lib/gfx-superformula/: CMakeLists.txt  main.cpp  objects.scm
lib/graphics/: FrameBufferManager.cpp  ShaderManager.cpp  Window.cpp
lib/jsonrpc/: Handler.cpp  Message.cpp  Server.cpp
lib/memory/: LinearAllocator.cpp  StringManager.cpp
lib/sequencer/: CMakeLists.txt  ConsoleBackend.cpp  Device.cpp  MidiOutBackend.cpp  MidiOutBackend.hpp  bindings.cpp
lib/snd-analysis/: CMakeLists.txt  main.cpp  objects.scm
lib/snd-io/: CMakeLists.txt  main.cpp  objects.scm
lib/snd-loadfile/: main.cpp  objects.scm  snd.loadfile_generated.h
lib/snd-oscillator/: main.cpp  objects.scm
lib/snd-ringbuffer/: main.cpp  objects.scm
lib/snd-utils/: main.cpp  objects.scm
modules/: CMakeLists.txt
modules/gfx-attractors/: CMakeLists.txt  main.cpp  objects.scm  particle.vert
modules/gfx-filter/: gfx.filter_generated.h  main.cpp  objects.scm
modules/gfx-quad/: CMakeLists.txt  main.cpp  objects.scm
modules/gfx-scopes/: CMakeLists.txt  main.cpp  objects.scm  phasescope.frag  phasescope.vert
modules/gfx-script/: CMakeLists.txt  IMRenderer.cpp  IMRenderer.hpp  main.cpp  objects.scm
modules/gfx-sndtex/: CMakeLists.txt  main.cpp  objects.scm
modules/gfx-superformula/: gfx.superformula_generated.h  main.cpp  objects.scm  superformula.frag  superformula.vert
modules/gfx.filter/: CMakeLists.txt  library.yaml  main.cpp
modules/gfx.quad/: gfx.quad_generated.h  library.yaml  main.cpp  quad.frag  quad.vert
modules/gfx.superformula/: CMakeLists.txt  library.yaml  main.cpp  superformula.vert
modules/snd-io/: main.cpp  objects.scm  snd.io_generated.h
modules/snd-loadfile/: main.cpp  objects.scm
modules/snd-oscillator/: CMakeLists.txt  main.cpp  objects.scm  snd.oscillator_generated.h
modules/snd-ringbuffer/: CMakeLists.txt  objects.scm
modules/snd-utils/: main.cpp  objects.scm
modules/snd.io/: library.yaml  main.cpp
modules/snd.loadfile/: CMakeLists.txt  library.yaml  main.cpp
modules/snd.oscillator/: buffers.h  library.yaml  main.cpp
modules/snd.utils/: CMakeLists.txt  library.yaml  main.cpp  snd.utils_generated.h
modules/test-all/: CMakeLists.txt  main.cpp  objects.scm
modules/test.all/: library.yaml  main.cpp  test.all_generated.h
plugins/gfx-attractors/: CMakeLists.txt  main.cpp  objects.scm
plugins/gfx-quad/: CMakeLists.txt  main.cpp  objects.scm
plugins/gfx-script/: CMakeLists.txt  IMRenderer.cpp  main.cpp  objects.scm  types.hpp
plugins/gfx-superformula/: CMakeLists.txt  main.cpp  objects.scm
plugins/snd-analysis/: CMakeLists.txt  main.cpp  objects.scm
plugins/snd-oscillator/: CMakeLists.txt  main.cpp  objects.scm
scm/: CMakeLists.txt  common.scm  compiler.scm  connect.scm  control.scm  engine.scm  extension.scm.in  media.scm  objects.scm  patcher.scm  patterns.scm  sequencer.scm  utils.scm
scm/compiler/: shared.scm
scm/connect/: elektron.scm
src/: CMakeLists.txt  audio_backend.cpp  audio_backend_jack.cpp  audio_backend_jack.hpp  audio_backend_portaudio.cpp  audio_backend_portaudio.hpp  audio_buffers.cpp  audio_buses.cpp  context.cpp  engine.cpp  fbos.cpp  graphics_debug.cpp  hasher.cpp  image.cpp  interpreter.cpp  linear_allocator.cpp  main.cpp  midi.cpp  modulation.cpp  parameters.cpp  plugins.cpp  registers.cpp  replay.cpp  ring_buffers.cpp  sequencer.cpp  shaders.cpp  strings.cpp  tasks.cpp  user_config_compiler.cpp  user_config_loader.cpp  video.cpp  window.cpp
src/audio/: AudioBufferManager.cpp  AudioBusManager.cpp  AudioDevices.cpp  AudioStream.cpp  RingBufferManager.cpp
src/common/: CMakeLists.txt  DataLoader.cpp  LinearAllocator.cpp  StringManager.cpp  hasher.cpp  main.cpp  scm.cpp  smobs.cpp
src/compiler/: CMakeLists.txt  Compiler.cpp
src/connect/: CMakeLists.txt  Midi.cpp  Midi.hpp  main.cpp
src/control/: CMakeLists.txt  Midi.cpp  Midi.hpp  main.cpp
src/engine/: AudioBackendJack.cpp  AudioBackendJack.hpp  AudioBackendPortAudio.cpp  AudioBackendPortAudio.hpp  AudioBufferManager.cpp  AudioBusManager.cpp  AudioDevices.cpp  AudioStream.cpp  CMakeLists.txt  Engine.cpp  FrameBufferManager.cpp  LibraryManager.cpp  ModulationManager.cpp  ParameterManager.cpp  PluginManager.cpp  ProgramManager.cpp  RegisterManager.cpp  RingBufferManager.cpp  ShaderManager.cpp  Window.cpp  audio_backend_jack.cpp  audio_backend_jack.hpp  audio_backend_portaudio.cpp  audio_backend_portaudio.hpp  audio_buffers.cpp  audio_buses.cpp  context.cpp  engine.cpp  fbos.cpp  graphics_debug.cpp  hasher.cpp  image.cpp  linear_allocator.cpp  modulation.cpp  parameters.cpp  plugins.cpp  registers.cpp  replay.cpp  ring_buffers.cpp  shaders.cpp  (+3 more)
src/graphics/: FrameBufferManager.cpp  ShaderManager.cpp  Window.cpp
src/gui/: CMakeLists.txt  engine_widget.cpp  engine_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  parameters_widget.cpp  parameters_widget.hpp  (+6 more)
test/: CMakeLists.txt  audio_buses.cpp  interpreter.cpp  linear_allocator.cpp  main.cpp  modulation.cpp  object.cpp  parameters.cpp  replay.cpp  ring_buffers.cpp  strings.cpp
(+423 files in other folders)
