add_subdirectory(snd-io)
# add_subdirectory(snd-loadfile)
add_subdirectory(snd-oscillator)
add_subdirectory(snd-ringbuffer)
add_subdirectory(snd-utils)
add_subdirectory(gfx-filter)
add_subdirectory(gfx-quad)
add_subdirectory(gfx-scopes)
add_subdirectory(gfx-script)
add_subdirectory(gfx-sndtex)
add_subdirectory(gfx-superformula)
