add_subdirectory(gfx-attractors)
add_subdirectory(gfx-filter)
add_subdirectory(gfx-noise)
add_subdirectory(gfx-quad)
add_subdirectory(gfx-scopes)
add_subdirectory(gfx-script)
add_subdirectory(gfx-sndtex)
add_subdirectory(gfx-superformula)
add_subdirectory(gfx-video)
add_subdirectory(snd-analysis)
add_subdirectory(snd-io)
add_subdirectory(snd-oscillator)
add_subdirectory(snd-ringbuffer)
